[package]
name = "petgraph-gen"
version = "0.1.0"
authors = ["poyeker <poyeker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.bench]
lto = true

[dependencies]
rand = "*"
petgraph = "0.5.1"
itertools = "0.9.0"
simple_rand = {git="https://github.com/poyeker/simple_rand.git"}
